// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Completion durationInput > durationInput.ts at 4:38 1`] = `
[
  {
    "insertText": "\${0} nanos",
    "isSnippet": true,
    "kind": "string",
    "name": "nanos",
    "sortText": "11",
  },
  {
    "insertText": "\${0} micros",
    "isSnippet": true,
    "kind": "string",
    "name": "micros",
    "sortText": "11",
  },
  {
    "insertText": "\${0} millis",
    "isSnippet": true,
    "kind": "string",
    "name": "millis",
    "sortText": "11",
  },
  {
    "insertText": "\${0} seconds",
    "isSnippet": true,
    "kind": "string",
    "name": "seconds",
    "sortText": "11",
  },
  {
    "insertText": "\${0} minutes",
    "isSnippet": true,
    "kind": "string",
    "name": "minutes",
    "sortText": "11",
  },
  {
    "insertText": "\${0} hours",
    "isSnippet": true,
    "kind": "string",
    "name": "hours",
    "sortText": "11",
  },
  {
    "insertText": "\${0} days",
    "isSnippet": true,
    "kind": "string",
    "name": "days",
    "sortText": "11",
  },
  {
    "insertText": "\${0} weeks",
    "isSnippet": true,
    "kind": "string",
    "name": "weeks",
    "sortText": "11",
  },
]
`;

exports[`Completion durationInput > durationInput_props.ts at 5:14 1`] = `[]`;

exports[`Completion effectCodegensComment > effectCodegensComment.ts at 2:5 1`] = `
[
  {
    "insertText": "@effect-codegens \${1|accessors,annotate,typeToSchema|} $0",
    "isSnippet": true,
    "kind": "string",
    "name": "@effect-codegens",
    "replacementSpan": {
      "length": 1,
      "start": 73,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion effectDataClasses > effectDataClasses.ts at 4:35 1`] = `
[
  {
    "insertText": "Data.TaggedError("MyError")<{\${0}}>{}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedError("MyError")",
    "replacementSpan": {
      "length": 5,
      "start": 133,
    },
    "sortText": "11",
  },
  {
    "insertText": "Data.TaggedClass("MyError")<{\${0}}>{}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedClass("MyError")",
    "replacementSpan": {
      "length": 5,
      "start": 133,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion effectDiagnosticsComment > effectDiagnosticsComment.ts at 2:5 1`] = `
[
  {
    "insertText": "@effect-diagnostics \${1|anyUnknownInErrorContext,asyncFunction,catchAllToMapError,catchUnfailableEffect,classSelfMismatch,cryptoRandomUUID,cryptoRandomUUIDInEffect,deterministicKeys,duplicatePackage,effectFnIife,effectFnImplicitAny,effectFnOpportunity,effectGenUsesAdapter,effectInFailure,effectInVoidSuccess,effectMapVoid,effectSucceedWithVoid,extendsNativeError,floatingEffect,genericEffectServices,globalConsole,globalConsoleInEffect,globalDate,globalDateInEffect,globalErrorInEffectCatch,globalErrorInEffectFailure,globalFetch,globalFetchInEffect,globalRandom,globalRandomInEffect,globalTimers,globalTimersInEffect,importFromBarrel,instanceOfSchema,layerMergeAllWithDependencies,lazyPromiseInEffectSync,leakingRequirements,missedPipeableOpportunity,missingEffectContext,missingEffectError,missingEffectServiceDependency,missingLayerContext,missingReturnYieldStar,missingStarInYieldEffectGen,multipleEffectProvide,newPromise,nodeBuiltinImport,nonObjectEffectServiceType,outdatedApi,outdatedEffectCodegen,overriddenSchemaConstructor,preferSchemaOverJson,processEnv,processEnvInEffect,redundantSchemaTagIdentifier,returnEffectInGen,runEffectInsideEffect,schemaStructWithTag,schemaSyncInEffect,schemaUnionOfLiterals,scopeInLayerEffect,serviceNotAsClass,strictBooleanExpressions,strictEffectProvide,tryCatchInEffectGen,unknownInEffectCatch,unnecessaryEffectGen,unnecessaryFailYieldableError,unnecessaryPipe,unnecessaryPipeChain,unsupportedServiceAccessors|}:\${2|off,warning,error,message,suggestion|}$0",
    "isSnippet": true,
    "kind": "string",
    "name": "@effect-diagnostics",
    "replacementSpan": {
      "length": 1,
      "start": 76,
    },
    "sortText": "11",
  },
  {
    "insertText": "@effect-diagnostics-next-line \${1|anyUnknownInErrorContext,asyncFunction,catchAllToMapError,catchUnfailableEffect,classSelfMismatch,cryptoRandomUUID,cryptoRandomUUIDInEffect,deterministicKeys,duplicatePackage,effectFnIife,effectFnImplicitAny,effectFnOpportunity,effectGenUsesAdapter,effectInFailure,effectInVoidSuccess,effectMapVoid,effectSucceedWithVoid,extendsNativeError,floatingEffect,genericEffectServices,globalConsole,globalConsoleInEffect,globalDate,globalDateInEffect,globalErrorInEffectCatch,globalErrorInEffectFailure,globalFetch,globalFetchInEffect,globalRandom,globalRandomInEffect,globalTimers,globalTimersInEffect,importFromBarrel,instanceOfSchema,layerMergeAllWithDependencies,lazyPromiseInEffectSync,leakingRequirements,missedPipeableOpportunity,missingEffectContext,missingEffectError,missingEffectServiceDependency,missingLayerContext,missingReturnYieldStar,missingStarInYieldEffectGen,multipleEffectProvide,newPromise,nodeBuiltinImport,nonObjectEffectServiceType,outdatedApi,outdatedEffectCodegen,overriddenSchemaConstructor,preferSchemaOverJson,processEnv,processEnvInEffect,redundantSchemaTagIdentifier,returnEffectInGen,runEffectInsideEffect,schemaStructWithTag,schemaSyncInEffect,schemaUnionOfLiterals,scopeInLayerEffect,serviceNotAsClass,strictBooleanExpressions,strictEffectProvide,tryCatchInEffectGen,unknownInEffectCatch,unnecessaryEffectGen,unnecessaryFailYieldableError,unnecessaryPipe,unnecessaryPipeChain,unsupportedServiceAccessors|}:\${2|off,warning,error,message,suggestion|}$0",
    "isSnippet": true,
    "kind": "string",
    "name": "@effect-diagnostics-next-line",
    "replacementSpan": {
      "length": 1,
      "start": 76,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion effectJsdocComment > effectJsdocComment.ts at 2:6 1`] = `
[
  {
    "insertText": "@effect-identifier",
    "isSnippet": true,
    "kind": "string",
    "name": "@effect-identifier",
    "replacementSpan": {
      "length": 1,
      "start": 71,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion effectSchemaSelfInClasses > effectSchemaSelfInClasses_directImportClass.ts at 4:35 1`] = `
[
  {
    "insertText": "Class<MyClass>("MyClass")({\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Class<MyClass>",
    "replacementSpan": {
      "length": 5,
      "start": 143,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion effectSchemaSelfInClasses > effectSchemaSelfInClasses_dotToken.ts at 4:22 1`] = `
[
  {
    "insertText": "S.Class<Test>("Test")({\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Class<Test>",
    "replacementSpan": {
      "length": 2,
      "start": 130,
    },
    "sortText": "11",
  },
  {
    "insertText": "S.TaggedErrorClass<Test>()("Test", {\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedErrorClass<Test>",
    "replacementSpan": {
      "length": 2,
      "start": 130,
    },
    "sortText": "11",
  },
  {
    "insertText": "S.TaggedClass<Test>()("Test", {\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedClass<Test>",
    "replacementSpan": {
      "length": 2,
      "start": 130,
    },
    "sortText": "11",
  },
  {
    "insertText": "S.ErrorClass<Test>("Test")({\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "ErrorClass<Test>",
    "replacementSpan": {
      "length": 2,
      "start": 130,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion effectSchemaSelfInClasses > effectSchemaSelfInClasses_model.ts at 4:40 1`] = `
[
  {
    "insertText": "Model.Class<MyDataModel>("MyDataModel")({\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Class<MyDataModel>",
    "replacementSpan": {
      "length": 6,
      "start": 156,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion effectSchemaSelfInClasses > effectSchemaSelfInClasses_tagg.ts at 4:25 1`] = `
[
  {
    "insertText": "S.Class<Test>("Test")({\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Class<Test>",
    "replacementSpan": {
      "length": 5,
      "start": 130,
    },
    "sortText": "11",
  },
  {
    "insertText": "S.TaggedErrorClass<Test>()("Test", {\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedErrorClass<Test>",
    "replacementSpan": {
      "length": 5,
      "start": 130,
    },
    "sortText": "11",
  },
  {
    "insertText": "S.TaggedClass<Test>()("Test", {\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedClass<Test>",
    "replacementSpan": {
      "length": 5,
      "start": 130,
    },
    "sortText": "11",
  },
  {
    "insertText": "S.ErrorClass<Test>("Test")({\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "ErrorClass<Test>",
    "replacementSpan": {
      "length": 5,
      "start": 130,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion fnFunctionStar > fnFunctionStar.ts at 4:24 1`] = `
[
  {
    "insertText": "fn("program")(function*(\${1}){\${0}})",
    "isSnippet": true,
    "kind": "const",
    "name": "fn("program")",
    "replacementSpan": {
      "length": 0,
      "start": 128,
    },
    "sortText": "11",
  },
  {
    "insertText": "fn(function*(\${1}){\${0}})",
    "isSnippet": true,
    "kind": "const",
    "name": "fn(function*(){})",
    "replacementSpan": {
      "length": 0,
      "start": 128,
    },
    "sortText": "11",
  },
  {
    "insertText": "fnUntraced(function*(\${1}){\${0}})",
    "isSnippet": true,
    "kind": "const",
    "name": "fnUntraced(function*(){})",
    "replacementSpan": {
      "length": 0,
      "start": 128,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion genFunctionStar > genFunctionStar.ts at 4:24 1`] = `
[
  {
    "insertText": "gen(function*(){\${0}})",
    "isSnippet": true,
    "kind": "const",
    "name": "gen(function*(){})",
    "replacementSpan": {
      "length": 0,
      "start": 129,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion genFunctionStar > genFunctionStar_imports.ts at 2:16 1`] = `[]`;

exports[`Completion serviceMapSelfInClasses > serviceMapSelfInClasses.ts at 4:43 1`] = `
[
  {
    "insertText": "ServiceMap.Service<MyService, {\${0}}>()("@effect/harness-effect-v4/MyService"){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Service<MyService, {}>",
    "replacementSpan": {
      "length": 11,
      "start": 153,
    },
    "sortText": "11",
  },
  {
    "insertText": "ServiceMap.Service<MyService>()("@effect/harness-effect-v4/MyService", { make: \${0} }){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Service<MyService>({ make })",
    "replacementSpan": {
      "length": 11,
      "start": 153,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion serviceMapSelfInClasses > serviceMapSelfInClasses_directImportService.ts at 4:39 1`] = `
[
  {
    "insertText": "Service<MyService, {\${0}}>()("@effect/harness-effect-v4/MyService"){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Service<MyService, {}>",
    "replacementSpan": {
      "length": 7,
      "start": 149,
    },
    "sortText": "11",
  },
  {
    "insertText": "Service<MyService>()("@effect/harness-effect-v4/MyService", { make: \${0} }){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Service<MyService>({ make })",
    "replacementSpan": {
      "length": 7,
      "start": 149,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion serviceMapSelfInClasses > serviceMapSelfInClasses_identifierKey.ts at 5:43 1`] = `
[
  {
    "insertText": "ServiceMap.Service<MyService, {\${0}}>()("@effect/harness-effect-v4/MyService"){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Service<MyService, {}>",
    "replacementSpan": {
      "length": 11,
      "start": 249,
    },
    "sortText": "11",
  },
  {
    "insertText": "ServiceMap.Service<MyService>()("@effect/harness-effect-v4/MyService", { make: \${0} }){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Service<MyService>({ make })",
    "replacementSpan": {
      "length": 11,
      "start": 249,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion serviceMapSelfInClasses > serviceMapSelfInClasses_middle.ts at 4:31 1`] = `
[
  {
    "insertText": "ServiceMap.Service<Foo, {\${0}}>()("@effect/harness-effect-v4/Foo"){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Service<Foo, {}>",
    "replacementSpan": {
      "length": 12,
      "start": 144,
    },
    "sortText": "11",
  },
  {
    "insertText": "ServiceMap.Service<Foo>()("@effect/harness-effect-v4/Foo", { make: \${0} }){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Service<Foo>({ make })",
    "replacementSpan": {
      "length": 12,
      "start": 144,
    },
    "sortText": "11",
  },
]
`;
